--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^14.5.2",
     "google-map-react": "^2.2.1",
     "nodemon": "^3.1.4",
+    "peerjs": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^8.1.3",
